--- a/Audrey.html
+++ b/Audrey.html
@@ -9,9 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Audrey" />
 
 
-<title>Wade Simmons</title>
+<title>Assignment 3 Audrey Page</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,8 +23,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
-<script src="site_libs/pagedtable-1.1/js/pagedtable.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -294,16 +293,22 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Wade Simmons</h1>
+<h1 class="title toc-ignore">Assignment 3 Audrey Page</h1>
+<h4 class="author">Audrey</h4>
+<h4 class="date">3/2/2021</h4>
 
 </div>
 
 
+<div id="audrey" class="section level2">
+<h2>Audrey</h2>
+<p>is looking forward to the following:</p>
 <ul>
-<li>Wade’s background is in terrestrial ecology, but now find himself studying aquatic systems.</li>
-<li>Wade is now involved in biological control, despite having no previous experience working with insects.</li>
-<li>Wade works with water chestnut. No, I’m sorry, it’s not the same species as what you had in your stir fry last night.</li>
+<li>The <a href="https://www.allaboutbirds.org/cams/barred-owls/">Cornell Barred Owl Cam</a> going live</li>
+<li>Planting acorns this week</li>
+<li>Submitting this homework on time</li>
 </ul>
+</div>
 
 
 
