Forgot to add the output line in the .yml line.

--- a/wade.html
+++ b/wade.html
@@ -280,7 +280,7 @@ $(document).ready(function () {
   <a href="wade.html">Wade</a>
 </li>
 <li>
-  <a href="audrey.html">Audrey</a>
+  <a href="Audrey.html">Audrey</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
