Attempting again to make this work

--- a/Audrey.html
+++ b/Audrey.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
   <a href="wade.html">Wade</a>
 </li>
 <li>
-  <a href="Audrey.html">Audrey</a>
+  <a href="audrey.html">Audrey</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
