--- a/wade.html
+++ b/wade.html
@@ -280,7 +280,7 @@ $(document).ready(function () {
   <a href="wade.html">Wade</a>
 </li>
 <li>
-  <a href="Audrey.html">Audrey</a>
+  <a href="audrey.html">Audrey</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -302,7 +302,7 @@ $(document).ready(function () {
 <ul>
 <li>Wade’s background is in terrestrial ecology, but now find himself studying aquatic systems.</li>
 <li>Wade is now involved in biological control, despite having no previous experience working with insects.</li>
-<li>Wade works with water chestnut. No, I’m sorry, it’s not the same species as what you had in your stir fry last night.</li>
+<li>Wade works with water chestnut. No, I’m sorry, it’s not the same plant species as what you had in your stir fry last night.</li>
 </ul>
 
 
